--- a/sass/style.scss
+++ b/sass/style.scss
@@ -14,3 +14,5 @@ Version: 1.0.0
 // @import "partials/variables";
 // @import "partials/typography";
 @import "partials/monsinseth";
+@import "partials/home";
+@import "partials/header";
